--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   #section1 {padding-top:50px;height:500px;color: #fff; background-color: #1E88E5;}
   #section2 {padding-top:50px;height:500px;color: #fff; background-color: #673ab7;}
   #section3 {padding-top:50px;height:500px;color: #fff; background-color: #ff9800;}
-  #section41 {padding-top:50px;height:500px;color: #fff; background-color: #00bcd4;}
-  #section42 {padding-top:50px;height:500px;color: #fff; background-color: #009688;}
+  #section4 {padding-top:50px;height:500px;color: #fff; background-color: #00bcd4;}
   </style>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -35,8 +34,8 @@
         <ul class="nav navbar-nav">
           <li><a href="#section1">Porque estudiar en la UNAD</a></li>
           <li><a href="#section2">Noticias De tecnologia</a></li>
-          <li><a href="#section2">Publicidad UNAD</a></li>
-          <li><a href="#section2">Como ingresar a la UNAD</a></li>
+          <li><a href="#section3">Publicidad UNAD</a></li>
+          <li><a href="#section4">Como ingresar a la UNAD</a></li>
           
         </ul>
       </div>
@@ -45,30 +44,24 @@
 </nav>    
 
 <div id="section1" class="container-fluid">
-  <h1>Section 1</h1>
+  <h1>Porque estudiar en la UNAD</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 </div>
 <div id="section2" class="container-fluid">
-  <h1>Section 2</h1>
+  <h1>Noticias De tecnologia</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 </div>
 <div id="section3" class="container-fluid">
-  <h1>Section 3</h1>
+  <h1>Publicidad UNAD</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 </div>
-<div id="section41" class="container-fluid">
-  <h1>Section 4 Submenu 1</h1>
+<div id="section4" class="container-fluid">
+  <h1>Como ingresar a la UNAD</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 </div>
-<div id="section42" class="container-fluid">
-  <h1>Section 4 Submenu 2</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-</div>
-
 </body>
 </html>
