--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
   body {
       position: relative; 
   }
+  #container{}
   #section1 {padding-top:50px;height:500px;color: #fff; background-color: #1E88E5;}
   #section2 {padding-top:50px;height:500px;color: #fff; background-color: #673ab7;}
   #section3 {padding-top:50px;height:500px;color: #fff; background-color: #ff9800;}
   #section4 {padding-top:50px;height:500px;color: #fff; background-color: #00bcd4;}
+
   </style>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -27,7 +29,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Unad Post</a>
+      <a class="navbar-brand" href="index.html">Unad Post</a>
     </div>
     <div>
       <div class="collapse navbar-collapse" id="myNavbar">
@@ -35,14 +37,13 @@
           <li><a href="#section1">Porque estudiar en la UNAD</a></li>
           <li><a href="#section2">Noticias De tecnologia</a></li>
           <li><a href="#section3">Publicidad UNAD</a></li>
-          <li><a href="#section4">Como ingresar a la UNAD</a></li>
-          
+          <li><a href="#section4">Como ingresar a la UNAD</a></li>          
         </ul>
       </div>
     </div>
   </div>
 </nav>    
-
+<div id="container">
 <div id="section1" class="container-fluid">
   <h1>Porque estudiar en la UNAD</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
@@ -62,6 +63,7 @@
   <h1>Como ingresar a la UNAD</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+</div>
 </div>
 </body>
 </html>
