--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   body {
       position: relative; 
   }
-  #container{}
   #section1 {padding-top:50px;height:500px;color: #fff; background-color: #1E88E5;}
   #section2 {padding-top:50px;height:500px;color: #fff; background-color: #673ab7;}
   #section3 {padding-top:50px;height:500px;color: #fff; background-color: #ff9800;}
@@ -43,7 +42,7 @@
     </div>
   </div>
 </nav>    
-<div id="container">
+<div class="container">
 <div id="section1" class="container-fluid">
   <h1>Porque estudiar en la UNAD</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
@@ -61,8 +60,17 @@
 </div>
 <div id="section4" class="container-fluid">
   <h1>Como ingresar a la UNAD</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <p>Video donde explica como realizar la matricula de un curso de postgrado en la Universidad nacional Abierta y A Distancia</p>
+  <video width="400" controls>
+  <source src="mov_bbb.mp4" type="video/mp4">
+  <source src="mov_bbb.ogg" type="video/ogg">
+  Your browser does not support HTML5 video.
+  </video>
+
+  <p>
+    Video courtesy of 
+  <a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
+</p>
 </div>
 </div>
 </body>
