--- a/index.html
+++ b/index.html
@@ -50,13 +50,29 @@
 </div>
 <div id="section2" class="container-fluid">
   <h1>Noticias De tecnologia</h1>
+  <p>Video explicativo donde nos muestra como crear una usb para instalar un sistema operativo</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <video width="400" controls>
+  <source src="mov_bbb.mp4" type="video/mp4">
+  <source src="mov_bbb.ogg" type="video/ogg">
+  Your browser does not support HTML5 video.
+  </video>
+
+  <p>
+    Video courtesy of 
+  <a href="https://www.youtube.com/watch?v=nCNmp5bC_XI" target="_blank">Big Buck Bunny</a>.
+</p>
+
+  
 </div>
 <div id="section3" class="container-fluid">
   <h1>Publicidad UNAD</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <p>Pauta radial de publicidad para la UNAD</p>
+  <audio controls>
+  <source src="horse.ogg" type="audio/ogg">
+  <source src="horse.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
 </div>
 <div id="section4" class="container-fluid">
   <h1>Como ingresar a la UNAD</h1>
