--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
 <div class="container">
 <div id="section1" class="container-fluid">
   <h1>Porque estudiar en la UNAD</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-</div>
+  <p>Las ventajas de estudiar en la UNAD, le va a permitir al estudiante acceder a clases desde cualquier lugar donde se encuentre y a la hora que desee desde un computador, celular o tablet organizando su tiempo, dando la oportunidad que pueda formarse a partir de su disponibilidad y desempeño autónomo que tenga cada persona para lograr sus objetivos propuestos, la Universidad Nacional Abierta y a Distancia le ofrece todos estos mecanismos de aprendizaje ahorrando tiempo y dinero en desplazamientos, no es necesario invertir en fotocopias y textos básicos, solo con la biblioteca virtual se encuentra la información necesaria para obtener mejores resultados.</p>
+  </div>
 <div id="section2" class="container-fluid">
   <h1>Noticias De tecnologia</h1>
   <p>Video explicativo donde nos muestra como crear una usb para instalar un sistema operativo</p>
