--- a/index.html
+++ b/index.html
@@ -75,15 +75,14 @@
 <div id="section4" class="container-fluid">
   <h1>Como ingresar a la UNAD</h1>
   <p>Video donde explica como realizar la matricula de un curso de postgrado en la Universidad nacional Abierta y A Distancia</p>
-  <video width="400" controls>
-  <source src="mov_bbb.mp4" type="video/mp4">
-  <source src="mov_bbb.ogg" type="video/ogg">
-  Your browser does not support HTML5 video.
-  </video>
+  <video width="400" autoplay>
+  <source src="https://youtu.be/xO9ow5D6DuQ" type="video/mp4">
+    Your browser does not support HTML5 video.
+     </video>
 
   <p>
-    Video courtesy of 
-  <a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
+    Video realizado en yputube por
+  <a href="https://www.youtube.com/" target="_blank">Andres Gonzalez</a>.
 </p>
 </div>
 <div class="footer-copyright text-center py-3">© 2019 Copyright:
