--- a/index.html
+++ b/index.html
@@ -75,10 +75,9 @@
 <div id="section4" class="container-fluid">
   <h1>Como ingresar a la UNAD</h1>
   <p>Video donde explica como realizar la matricula de un curso de postgrado en la Universidad nacional Abierta y A Distancia</p>
-  <video width="400" autoplay>
-  <source src="https://youtu.be/xO9ow5D6DuQ" type="video/mp4">
-    Your browser does not support HTML5 video.
-     </video>
+  <iframe width="420" height="315"
+src="https://www.youtube.com/embed/tgbNymZ7vqY">
+</iframe>
 
   <p>
     Video realizado en yputube por
