--- a/index.html
+++ b/index.html
@@ -50,15 +50,13 @@
 <div id="section2" class="container-fluid">
   <h1>Noticias De tecnologia</h1>
   <p>Video explicativo donde nos muestra como crear una usb para instalar un sistema operativo</p>
-  <video width="400" controls>
-  <source src="mov_bbb.mp4" type="video/mp4">
-  <source src="mov_bbb.ogg" type="video/ogg">
-  Your browser does not support HTML5 video.
-  </video>
+  <iframe width="420" height="315"
+    src="https://youtu.be/m0x1q6HeT1Q">
+  </iframe>
 
   <p>
     Video courtesy of 
-  <a href="https://www.youtube.com/watch?v=nCNmp5bC_XI" target="_blank">Big Buck Bunny</a>.
+  <a href="https://www.youtube.com/channel/UCB20QSVDN3E2eEyJ28kx6og" target="_blank">Mazthertutoriales</a>.
 </p>
 
   
@@ -76,11 +74,11 @@
   <h1>Como ingresar a la UNAD</h1>
   <p>Video donde explica como realizar la matricula de un curso de postgrado en la Universidad nacional Abierta y A Distancia</p>
   <iframe width="420" height="315"
-src="https://www.youtube.com/embed/tgbNymZ7vqY">
-</iframe>
+    src="https://youtu.be/xO9ow5D6DuQ">
+  </iframe>
 
   <p>
-    Video realizado en yputube por
+    Video realizado en youtube por: 
   <a href="https://www.youtube.com/" target="_blank">Andres Gonzalez</a>.
 </p>
 </div>
