--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
 <div id="section2" class="container-fluid">
   <h1>Noticias De tecnologia</h1>
   <p>Video explicativo donde nos muestra como crear una usb para instalar un sistema operativo</p>
-  <iframe width="420" height="315"
-    src="https://youtu.be/m0x1q6HeT1Q">
-  </iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/m0x1q6HeT1Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
   <p>
     Video courtesy of 
@@ -73,9 +71,7 @@
 <div id="section4" class="container-fluid">
   <h1>Como ingresar a la UNAD</h1>
   <p>Video donde explica como realizar la matricula de un curso de postgrado en la Universidad nacional Abierta y A Distancia</p>
-  <iframe width="420" height="315"
-    src="https://youtu.be/xO9ow5D6DuQ">
-  </iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/xO9ow5D6DuQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
   <p>
     Video realizado en youtube por: 
